removed 20px left to align popup menu correctly

--- a/frontend/common/app/assets/stylesheets/nav/_pop-up.scss
+++ b/frontend/common/app/assets/stylesheets/nav/_pop-up.scss
@@ -105,7 +105,6 @@
         right: auto;
         @include rem((
             top: 44px,
-            left: 20px,
             width: gs-span(3)
         ));
     }
